--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-datasets==2.14.5
-evaluate==0.4.0
-numpy==1.23.5
-peft==0.6.2
-pytorch_crf==0.7.2
-torch==2.0.1
-transformers==4.27.3
+datasets
+evaluate
+numpy
+peft
+pytorch_crf
+torch
+transformers
+seqeval
